Change as java 11